<resources>
    <string name="app_name">辽宁工会</string>
    <string name="common_loading">加载中&#8230;</string>

    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="union_index">工会圈</string>
    <string name="service_index">服务</string>
    <string name="discovery_index">惠商城</string>
    <string name="my_index">我的</string>

    <!-- 网络请求 -->
    <string name="http_loading">加载中&#8230;</string>

    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_account_error">账号异常，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>

    <string name="topNews">置顶</string>


    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>

    <string name="common_network">当前没有网络连接，请检查网络设置</string>


    <!-- 提示布局 -->
    <string name="hint_layout_no_data">空空如也</string>
    <string name="hint_layout_error_request">请求出错，点击重试</string>
    <string name="hint_layout_error_network">网络错误，点击重试</string>


    <!-- 浏览器 -->
    <string name="web_title">网页加载中&#8230;</string>


    <string name="home_service_title">工会服务</string>
    <string name="home_service_more">查看更多服务</string>
    <string name="home_service_1">12351</string>
    <string name="home_service_2">职工书屋</string>
    <string name="home_service_3">劳模之家</string>
    <string name="home_service_4">活动竞赛</string>
    <string name="gotoLogin">去登录</string>
    <string name="gotoVerify">去认证</string>


    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>


    <!-- 通用的 -->
    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>

    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>

    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>
    <!-- 我的-->
    <string name="my_favorite">我的收藏</string>
    <string name="my_addressManager">收货地址</string>
    <string name="my_contactUs">联系我们</string>
    <string name="my_system_info">系统消息</string>
    <string name="my_feedBack">意见反馈</string>
    <string name="my_setting">设置</string>

    <string name="setting_exit">退出登录</string>
    <string name="setting_about">关于辽宁工会</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_notify">新消息通知</string>
    <string name="setting_clear">清空缓存</string>

    <string name="auth_confirm">允许</string>
    <string name="auth_refuse">拒绝</string>

    <string name="about_title">关于我们</string>

    <string name="tv_about_us_deal">《辽宁工会软件许可及服务协议》</string>
    <string name="tv_about_us_and">和</string>
    <string name="tv_about_us_protect">《辽宁工会隐私保护指引》</string>
    <string name="tv_about_us_belong">辽宁省总工会 版权所有</string>
    <string name="tv_about_us">Copyright@2021辽宁省总工会.AllRightsReserved</string>
    <string name="about_us_introduce">　　辽宁工会是由辽宁省总工会为职工提供便利服务的客户端应用，辽宁工会让职工可以在线读书，享受律师咨询，保障个人利益，解决工作或生活中遇到的问题，满足职工的需求，并且还可发起工会活动，促进职工工作、生活线上线下的有机融合。提供机构介绍、新闻资讯、风采展示、工会服务、活动组织、工会圈等服务。辽宁工会将整合优势资源，为职工提供更多个性化的服务。让职工满意是我们不断地追求。</string>

    <string name="push_title">推送设置</string>
    <string name="push_info">资讯更新</string>
    <string name="push_service">服务提醒</string>
    <string name="push_union">工会圈提醒</string>

    <string name="contactUs">联系我们</string>

    <string name="contact_us_web">官方网站</string>
    <string name="contact_us_wx">微信公众号</string>
    <string name="contact_us_mail">邮箱</string>
    <string name="contact_us_tel">服务电话</string>


    <string name="tv_contact_us_web">www.lnszgh.org</string>
    <string name="tv_contact_us_wx">辽宁省总工会</string>
    <string name="tv_contact_us_mail">lnszwlb@126.com</string>
    <string name="tv_contact_us_tel">12351</string>

    <string name="feedBack">意见反馈</string>
    <string name="feedback_title">请留下您的宝贵意见</string>
    <string name="feedback_hint">请留下联系方式(手机，qq号)选填,50字内</string>
    <string name="feedback_submit">提交反馈</string>


    <string name="registerNewUser">新用户注册</string>
    <string name="register_new_tag">注册辽宁工会，立享更多服务</string>
    <string name="phoneNumberChina">+86</string>
    <string name="nextStep">下一步</string>
    <string name="pleaseInputPicVerifyCode">请输入验证码</string>
    <string name="register_new_tag1">验证码已发送至  (+86) X</string>
    <string name="register_new_tag2"> 后可重新发送</string>
    <string name="register_new_tag3">请设置登录密码</string>
    <string name="register_new_tag4">设置登录密码，即刻登入辽宁工会</string>
    <string name="register_new_tag5"> 设置密码并登录</string>
    <string name="register_new_tag6">重新发送</string>
    <string name="register_new_tag7">正在发送</string>
    <string name="passwordLengthMustAbove">密码长度必须不小于8，且必须包含数字、字母、符号至少两种</string>

    <string name="resetPw">忘记密码</string>
    <string name="pleaseInputYourPhoneNumber">请输入手机号</string>
    <string name="pleaseInputVerifyCode">请输入短信验证码</string>
    <string name="clickToSendVerifyCode">验证码</string>
    <string name="pleaseSetNewPassword">请设置新密码</string>
    <string name="confirm">确认</string>
    <string name="findPw">找回密码</string>

    <string name="pleaseInputNewPw">请输入新密码</string>
    <string name="doingChangePw">正在修改密码...</string>
    <string name="changePwSuccessPleaseReLogin">修改密码成功，请重新登录</string>
    <string name="sendSuccess">发送成功</string>

    <string name="sendCircleTitle">发布动态</string>
    <string name="send">发送</string>
    <string name="editSendCircleHint">说点什么......</string>

    <string name="circleMsgCannotBeEmpty">发送消息不可为空</string>
    <string name="dongingSendCircleMsg">正在发布工会圈..</string>
    <string name="uploadCircleImageFail">上传图片失败</string>


    <!-- 图片选择 -->
    <string name="image_select_title">图片选择</string>
    <string name="image_select_all">所有图片</string>
    <string name="image_select_total">共 %d 张</string>
    <string name="image_select_max_hint">本次最多只能选择 %d 张图片</string>

    <!-- 拍照 -->
    <string name="camera_launch_fail">无法启动相机</string>
    <string name="camera_image_error">目标地址错误</string>

</resources>