<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AboutActivity">


    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/contactUs"
        app:titleColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>
    <ImageView
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:src="@drawable/icon_splash_slogan"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>

    <com.hjq.widget.layout.SettingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/contact_us_web"
        app:bar_rightText="@string/tv_contact_us_web" />

    <com.hjq.widget.layout.SettingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/contact_us_wx"
        app:bar_rightText="@string/tv_contact_us_wx" />

    <com.hjq.widget.layout.SettingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/contact_us_mail"
        app:bar_rightText="@string/tv_contact_us_mail"
        />

    <com.hjq.widget.layout.SettingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/contact_us_tel"
        app:bar_rightText="@string/tv_contact_us_tel" />
</LinearLayout>
