<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_home_selector"
        android:title="@string/home_nav_index"/>

    <item
        android:id="@+id/menu_union"
        android:icon="@drawable/home_union_selector"
        android:title="@string/union_index"/>

    <item
        android:id="@+id/menu_discovery"
        android:icon="@drawable/home_discovery_selector"
        android:title="@string/discovery_index"/>
    <item
        android:id="@+id/menu_service"
        android:icon="@drawable/home_service_selector"
        android:title="@string/service_index"/>
    <item
        android:id="@+id/menu_my"
        android:icon="@drawable/home_me_selector"
        android:title="@string/my_index"/>
</menu>