<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AboutActivity">


    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_title"
        app:titleColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colore0e0e0"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_banner"
            android:layout_width="108dp"
            android:layout_height="106dp"
            android:src="@drawable/icon_splash_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_version"
            android:layout_below="@+id/iv_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color4d4d4d"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_introduce"
            android:layout_below="@id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color4d4d4d"
            android:textSize="14sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/about_us_introduce"
            />




        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color526796"
            android:text="@string/tv_about_us_deal"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/tv_and"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color69"
            android:text="@string/tv_about_us_and"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/tv_pro"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color526796"
            android:text="@string/tv_about_us_protect"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/tv_action"
            android:layout_marginBottom="3dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/color69"
            android:text="@string/tv_about_us_belong"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/color69"
            android:layout_marginTop="20px"
            android:text="@string/tv_about_us"
            android:layout_marginBottom="46px"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            />
    </RelativeLayout>

</LinearLayout>
