<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layoutAnimation="@anim/from_bottom_layout"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity"
    tools:layoutAnimation="@null">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:backButton="false"
        app:barStyle="transparent"
        app:rightColor="@color/colorAccent"
        app:rightTitle="@string/login_register"
        app:title="" />


    <View
        android:id="@+id/iv_login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginVertical="30dp"
        />

    <LinearLayout
        android:id="@+id/ll_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/et_login_phone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/common_phone_input_hint"
            android:inputType="textVisiblePassword"
            android:singleLine="true"
            app:regexType="mobile"
            android:text="18240349259"/>

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginHorizontal="40dp" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/common_password_input_error"
            android:maxLength="20"
            android:maxLines="1"
            android:text="p12345678"/>

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginHorizontal="40dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="60dp"
            android:text="@string/login_forget"
            android:textColor="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_commit"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_text" />

    </LinearLayout>

    <View
        android:id="@+id/v_login_blank"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="5" />





</LinearLayout>