<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorf5f5f5"
    >


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/color272727"
        android:layout_marginTop="54dp"
        android:layout_marginLeft="40dp"
        android:text="@string/registerNewUser"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_new_tag"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="19dp"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="40dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color272727"
            android:text="@string/phoneNumberChina"
            android:textSize="19sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_register_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:background="@null"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="19sp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_phone_clear"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_nav_close"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorPrimaryRed"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextStep"
        android:textSize="19sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorb2b2b2"/>

</LinearLayout>